bench/log
Scanning dependencies of target bench2dupdate_fs
[ 50%] Building CXX object CMakeFiles/bench2dupdate_fs.dir/bench/bench_update.cpp.o
In file included from /home/zengyuxiang/learnedbench/bench/../indexes/revision-update/nonlearned_index.hpp:7,
                 from /home/zengyuxiang/learnedbench/bench/bench_update.cpp:4:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp: In instantiation of ‘bench::index::OctreeNode<dim, MaxElements>::OctreeNode(const Points&, const Points&, size_t) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::OctreeNode<dim, MaxElements>::Points = std::vector<std::array<double, 2> >; size_t = long unsigned int]’:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:419:11:   required from ‘bench::index::Octree<dim, MaxElements>::Octree(bench::index::Octree<dim, MaxElements>::Points&, bench::index::Octree<dim, MaxElements>::Points&) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::Octree<dim, MaxElements>::Points = std::vector<std::array<double, 2> >]’
/home/zengyuxiang/learnedbench/bench/bench_update.cpp:99:54:   required from here
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:73:39: error: cannot convert ‘const value_type’ {aka ‘const std::array<double, 2>’} to ‘const Points&’ {aka ‘const std::vector<std::array<double, 2> >&’}
   73 |                                 insert(points_backup[idx], idx, 1);
      |                                 ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:131:43: note:   initializing argument 1 of ‘void bench::index::OctreeNode<dim, MaxElements>::insert(const Points&, int, int, int) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::OctreeNode<dim, MaxElements>::Points = std::vector<std::array<double, 2> >]’
  131 |                 void insert(const Points& points, const int pid, int num=1, int dep=0) {
      |                             ~~~~~~~~~~~~~~^~~~~~
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp: In instantiation of ‘int bench::index::OctreeNode<dim, MaxElements>::__erase(const Points&, int, bool&) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::OctreeNode<dim, MaxElements>::Points = std::vector<std::array<double, 2> >]’:
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:194:4:   required from ‘bool bench::index::OctreeNode<dim, MaxElements>::erase(const Points&, int) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::OctreeNode<dim, MaxElements>::Points = std::vector<std::array<double, 2> >]’
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:476:28:   required from ‘bool bench::index::Octree<dim, MaxElements>::__erase(size_t) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; size_t = long unsigned int]’
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:500:15:   required from ‘bool bench::index::Octree<dim, MaxElements>::erase(size_t) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; size_t = long unsigned int]’
/home/zengyuxiang/learnedbench/bench/query_update.hpp:252:16:   required from ‘void bench::query::batch_update_queries_byID(Index&, vec_of_point_t<Dim>&, vec_of_point_t<Dim>&, std::vector<std::pair<int, long unsigned int> >&) [with Index = bench::index::Octree<2>; long unsigned int Dim = 2; vec_of_point_t<Dim> = std::vector<std::array<double, 2> >]’
/home/zengyuxiang/learnedbench/bench/bench_update.cpp:182:52:   required from here
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:229:71: error: cannot convert ‘const Point’ {aka ‘const std::array<double, 2>’} to ‘int’
  229 |                                 int erased = children[octant]->__erase(points, point, success);
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
/home/zengyuxiang/learnedbench/bench/../indexes/revision-update/Octree.hpp:198:61: note:   initializing argument 2 of ‘int bench::index::OctreeNode<dim, MaxElements>::__erase(const Points&, int, bool&) [with long unsigned int dim = 2; long unsigned int MaxElements = 128; bench::index::OctreeNode<dim, MaxElements>::Points = std::vector<std::array<double, 2> >]’
  198 |                 int __erase(const Points& points, const int pid, bool& success) {
      |                                                   ~~~~~~~~~~^~~
CMakeFiles/bench2dupdate_fs.dir/build.make:82: recipe for target 'CMakeFiles/bench2dupdate_fs.dir/bench/bench_update.cpp.o' failed
make[2]: *** [CMakeFiles/bench2dupdate_fs.dir/bench/bench_update.cpp.o] Error 1
CMakeFiles/Makefile2:95: recipe for target 'CMakeFiles/bench2dupdate_fs.dir/all' failed
make[1]: *** [CMakeFiles/bench2dupdate_fs.dir/all] Error 2
Makefile:103: recipe for target 'all' failed
make: *** [all] Error 2
